# tuneloop

./: .gitignore  README.md  pyproject.toml
docs/: experiments.md
scripts/: generate_poems.py
src/tuneloop/: cli.py  config.py  db.py  export.py  gguf.py  judge.py  models.py  proxy.py  reward_model.py  train.py
